--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1770,5 +1770,24 @@
     <string name="P466">Nhập email của bạn</string>
     <string name="P491">Mặt sau căn cước</string>
     <string name="P492_1">Kích thướng không quá 500KB.</string>
-
+    <string name="A001">Chờ một chút!</string>
+    <string name="A002_1">Hoàn thành nạp lần đầu và nhận lại tiền mặt ₱100</string>
+    <string name="A003">Hủy bỏ</string>
+    <string name="A004">Tiếp tục</string>
+    <string name="A005">Nhận thưởng nạp lần đầu</string>
+    <string name="A006_1">Tiền thưởng cho khoản phí đầu tiên ₱120</string>
+    <string name="A007">Điều kiện nhận:</string>
+    <string name="A008">Khoản phí đầu tiên đã hoàn thành</string>
+    <string name="A009">Doanh thu > 1000</string>
+    <string name="A010">Ngày mai đăng nhập</string>
+    <string name="A011">Hoàn thành nạp lần đầu, đạt doanh thu 1.000 nhân dân tệ và đăng nhập vào ngày hôm sau để nhận</string>
+    <string name="A012">Nhận ngay</string>
+    <string name="A013">Gợi ý</string>
+    <string name="A014">Lần nạp tiền cuối của bạn không thành công. Bạn chỉ có thể nhận được số tiền thưởng nếu bạn nạp lần đầu thành công</string>
+    <string name="A015">Nạp tiền</string>
+    <string name="A016">Nạp lần đầu</string>
+    <string name="A017_1">Thưởng thêm %s</string>
+    <string name="A018">Nhận hoàn tiền %s vào ngày mai</string>
+    <string name="A019">Nạp tiền</string>
+    <string name="A020">Chi tiết</string>
 </resources>
