--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1905,12 +1905,12 @@
     <string name="A003">Cancel</string>
     <string name="A004">Continue</string>
     <string name="A005">Get First Deposit Reward</string>
-    <string name="A006_1">First Charge Reward Amount ₱120</string>
+    <string name="A006_1">First Charge Reward Amount</string>
     <string name="A007">Receiving Condition:</string>
     <string name="A008">First Charge Completed</string>
-    <string name="A009">Turnover > 1000</string>
+    <string name="A009">Turnover > %s</string>
     <string name="A010">Tomorrow Log-In</string>
-    <string name="A011">Complete the first deposit, reach a turnover of 1,000 yuan and log in the next day to receive</string>
+    <string name="A011">Complete the first deposit, reach a turnover of %s and log in the next day to receive</string>
     <string name="A012">Get It Right Now</string>
     <string name="A013">Hint</string>
     <string name="A014">Your Last Recharge Was Not Successful. You Can Only Get The Bonus Amount If You Successfully Recharge For The First Time.</string>
