--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1775,12 +1775,12 @@
     <string name="A003">Hủy bỏ</string>
     <string name="A004">Tiếp tục</string>
     <string name="A005">Nhận thưởng nạp lần đầu</string>
-    <string name="A006_1">Tiền thưởng cho khoản phí đầu tiên ₱120</string>
+    <string name="A006_1">Tiền thưởng cho khoản phí đầu tiên</string>
     <string name="A007">Điều kiện nhận:</string>
     <string name="A008">Khoản phí đầu tiên đã hoàn thành</string>
-    <string name="A009">Doanh thu > 1000</string>
+    <string name="A009">Doanh thu > %s</string>
     <string name="A010">Ngày mai đăng nhập</string>
-    <string name="A011">Hoàn thành nạp lần đầu, đạt doanh thu 1.000 nhân dân tệ và đăng nhập vào ngày hôm sau để nhận</string>
+    <string name="A011">Hoàn thành nạp lần đầu, đạt doanh thu %s dân tệ và đăng nhập vào ngày hôm sau để nhận</string>
     <string name="A012">Nhận ngay</string>
     <string name="A013">Gợi ý</string>
     <string name="A014">Lần nạp tiền cuối của bạn không thành công. Bạn chỉ có thể nhận được số tiền thưởng nếu bạn nạp lần đầu thành công</string>
