--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1900,4 +1900,11 @@
     <string name="P466">Please enter your Email</string>
     <string name="P491">Back of ID</string>
     <string name="P492_1">The file size should be under 500KB.</string>
+    <string name="B71">Cash Out %s</string>
+    <string name="B72">Please Confirm Cash Out</string>
+    <string name="B73">Cash Out</string>
+    <string name="B74">Cash Out Successful！</string>
+    <string name="B75">Cash Out Fails！</string>
+    <string name="B104">Cashing out</string>
+    <string name="B105">Cashed out</string>
 </resources>
