--- a/app/src/main/res/values-phi/strings.xml
+++ b/app/src/main/res/values-phi/strings.xml
@@ -1746,7 +1746,7 @@
     <string name="A002_1">Kumpletuhin ang Iyong Unang Deposito At Makakuha ng Cash Back na ₱100</string>
     <string name="A003">Kanselahin</string>
     <string name="A004">Ipagpatuloy</string>
-    <string name="A005">Kumuha ng unang Deposito na reward</string>
+    <string name="A005">Get First Deposit Reward</string>
     <string name="A006_1">Unang recharge reward na halaga</string>
     <string name="A007">Kundisyon ng Pagtanggap:</string>
     <string name="A008">Nakumpleto ang Unang recharge</string>
