--- a/app/src/main/res/values-phi/strings.xml
+++ b/app/src/main/res/values-phi/strings.xml
@@ -1750,7 +1750,7 @@
     <string name="A006_1">Unang recharge reward na halaga</string>
     <string name="A007">Kundisyon ng Pagtanggap:</string>
     <string name="A008">Nakumpleto ang Unang recharge</string>
-    <string name="A009">Turnover > %s</string>
+    <string name="A009">Turnover >= %s</string>
     <string name="A010">Bukas Log-In</string>
     <string name="A011">Kumpletuhin ang unang deposito, maabot ang turnover na %s at mag-log in sa susunod na araw upang makatanggap</string>
     <string name="A012">Kunin ngayon</string>
