修复cashout按钮显示

--- a/app/src/main/res/values-phi/strings.xml
+++ b/app/src/main/res/values-phi/strings.xml
@@ -1742,7 +1742,7 @@
     <string name="P466">Pakilagay ang iyong Email</string>
     <string name="P491">Likod ng ID</string>
     <string name="P492_1">ang laki ng file ay dapat na mas mababa sa 500KB.</string>
-    <string name="B71">Instant cash out %s</string>
+    <string name="B71">Instant cash out</string>
     <string name="B72">Pakikumpirma ang instant cash out na</string>
     <string name="B73">Cash Out</string>
     <string name="B74">Matagumpay ang cash out!</string>
