密保问题处理显示不换行

--- a/app/src/main/res/values-phi/strings.xml
+++ b/app/src/main/res/values-phi/strings.xml
@@ -1762,6 +1762,7 @@
     <string name="B194">Ano ang paborito mong pagkain?</string>
     <string name="B199">Nakakonpigurado</string>
     <string name="B200">Paki-pili…</string>
+    <string name="B203">Pakilagay ang iyong password sa pag-login</string>
 
 </resources>
 
