--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1790,5 +1790,6 @@
     <string name="B194">Món ăn yêu thích của bạn là gì?</string>
     <string name="B199">Đã cấu hình</string>
     <string name="B200">Vui lòng chọn…</string>
+    <string name="B203">Mời nhập mật khẩu đăng nập của bạn</string>
 
 </resources>
