--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1846,5 +1846,6 @@
     <string name="B194">你最喜欢的食物是什么？</string>
     <string name="B199">已配置</string>
     <string name="B200">请选择…</string>
+    <string name="B203">请输入您的登录密码</string>
 
 </resources>
