密保翻译移除句号

--- a/app/src/main/res/values-phi/strings.xml
+++ b/app/src/main/res/values-phi/strings.xml
@@ -1748,7 +1748,7 @@
     <string name="B180">Security question</string>
     <string name="B181">Mangyaring sagutin ang security question</string>
     <string name="B182">Mangyaring piliin ang iyong security question</string>
-    <string name="B183">Please set up the answer for the security question.</string>
+    <string name="B183">Please set up the answer for the security question</string>
     <string name="B184">Sagot</string>
     <string name="B185">Ano ang pangalan ng iyong unang alagang hayop?</string>
     <string name="B186">Ano ang pangalan ng iyong unang paaralan?</string>
