--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1775,7 +1775,7 @@
     <string name="B179">Đăng nhập bằng câu hỏi bảo mật</string>
     <string name="B180">Câu hỏi bảo mật</string>
     <string name="B181">Vui lòng trả lời câu hỏi bảo mật</string>
-    <string name="B182">Vui lòng chọn câu hỏi bảo mật của bạn.</string>
+    <string name="B182">Vui lòng chọn câu hỏi bảo mật của bạn</string>
     <string name="B183">Vui lòng đặt câu trả lời cho câu hỏi bảo mật</string>
     <string name="B184">Trả lời</string>
     <string name="B185">Tên thú cưng đầu tiên của bạn là gì?</string>
