--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1831,7 +1831,7 @@
     <string name="B179">通过密保问题登录</string>
     <string name="B180">密保问题</string>
     <string name="B181">请回答密保问题</string>
-    <string name="B182">请选您的密保问题。</string>
+    <string name="B182">请选您的密保问题</string>
     <string name="B183">请设置密保问题的答案</string>
     <string name="B184">回答</string>
     <string name="B185">你的第一个宠物叫什么名字？</string>
