--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1905,8 +1905,8 @@
     <string name="B179">Login Via Security Question</string>
     <string name="B180">Security Question</string>
     <string name="B181">Please Answer the Security Question</string>
-    <string name="B182">Please select your security question.</string>
-    <string name="B183">Please set up the answer for the security question.</string>
+    <string name="B182">Please select your security question</string>
+    <string name="B183">Please set up the answer for the security question</string>
     <string name="B184">Answer</string>
     <string name="B185">What is the name of your first pet?</string>
     <string name="B186">What was the name of your first school?</string>
