OKGames和OKlives翻译修改

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1854,4 +1854,6 @@
     <string name="B75">即时兑现失败！</string>
     <string name="B104">兑现中</string>
     <string name="B105">已兑现</string>
+    <string name="B23">老虎机</string>
+    <string name="B24">真人</string>
 </resources>
