完善slot点击判断

--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1798,6 +1798,6 @@
     <string name="B75">Bán vé cược thất bại!</string>
     <string name="B104">Đang bán vé cược</string>
     <string name="B105">Đã bán vé cược</string>
-    <string name="B23">Máy đánh bạc</string>
+    <string name="B23">Slot</string>
     <string name="B24">Casino</string>
 </resources>
