--- a/app/src/main/res/values-phi/strings.xml
+++ b/app/src/main/res/values-phi/strings.xml
@@ -1770,7 +1770,7 @@
     <string name="B75">Nag-failed ang cash out!</string>
     <string name="B104">Nag- cash out palang</string>
     <string name="B105">Nag- cash out na</string>
-    <string name="B23">Puwang</string>
+    <string name="B23">Slot</string>
     <string name="B24">Casino</string>
 </resources>
 
