--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1257,7 +1257,7 @@
     <string name="J134">Đăng nhập</string>
     <string name="J151">Đăng ký</string>
     <string name="N700">Sắp ra mắt</string>
-    <string name="N704">OKGames phổ biến</string>
+    <string name="N704">Slot phổ biến</string>
     <string name="N986">Hướng</string>
     <string name="N902">Theo dõi chũng tôi</string>
     <string name="facebookFollow">Facebook</string>
