--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1313,7 +1313,7 @@
     <string name="J134">登录</string>
     <string name="J151">注册</string>
     <string name="N700">敬请期待</string>
-    <string name="N704">推荐棋牌游戏</string>
+    <string name="N704">推荐老虎机游戏</string>
     <string name="N986">方位</string>
 
     <string name="N902">关注我们</string>
