--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1353,7 +1353,7 @@
     <string name="J134">Login</string>
     <string name="J151">Sign Up</string>
     <string name="N700">Coming Soon</string>
-    <string name="N704">Popular OKGames</string>
+    <string name="N704">Popular Slot</string>
     <string name="N986">Direction</string>
     <string name="N908">Scan</string>
     <string name="N951">Album import</string>
