--- a/app/src/main/res/values-phi/strings.xml
+++ b/app/src/main/res/values-phi/strings.xml
@@ -1238,7 +1238,7 @@
     <string name="J134">Mag log in</string>
     <string name="J151">Magrehistro</string>
     <string name="N700">Malapit na</string>
-    <string name="N704">Patok na OKGame</string>
+    <string name="N704">Patok na Slot</string>
     <string name="N986">Direksyon</string>
 
     <string name="N902">Follow us</string>
