首页底部增加数据隐私法

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1953,4 +1953,5 @@
     <string name="B23">Slot</string>
     <string name="B24">Casino</string>
     <string name="P452">Perya</string>
+    <string name="B634">The Data Privacy Act</string>
 </resources>
