--- a/app/src/main/res/values-phi/strings.xml
+++ b/app/src/main/res/values-phi/strings.xml
@@ -1795,5 +1795,6 @@
     <string name="B23">Slot</string>
     <string name="B24">Casino</string>
     <string name="P452">Perya</string>
+    <string name="B634">The Data Privacy Act</string>
 </resources>
 
