--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1823,4 +1823,5 @@
     <string name="B23">Slot</string>
     <string name="B24">Casino</string>
     <string name="P452">Perya</string>
+    <string name="B634">Luật bảo vệ dữ liệu cá nhân</string>
 </resources>
