--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1879,4 +1879,5 @@
     <string name="B23">老虎机</string>
     <string name="B24">真人</string>
     <string name="P452">游乐场</string>
+    <string name="B634">数据隐私法</string>
 </resources>
