个人中心免登录进入

--- a/app/src/main/res/values-phi/strings.xml
+++ b/app/src/main/res/values-phi/strings.xml
@@ -1796,5 +1796,8 @@
     <string name="B24">Casino</string>
     <string name="P452">Perya</string>
     <string name="B634">The Data Privacy Act</string>
+    <string name="C047">Mag-login na</string>
+    <string name="C048">I-view ang iyong VIP information pagkatapos mag-log in</string>
+    <string name="C049">Maligayang pagdating sa OKBET!</string>
 </resources>
 
