--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1880,4 +1880,7 @@
     <string name="B24">真人</string>
     <string name="P452">游乐场</string>
     <string name="B634">数据隐私法</string>
+    <string name="C047">立即登录</string>
+    <string name="C048">登录后查看您的VIP信息</string>
+    <string name="C049">欢迎来到OKBET！</string>
 </resources>
