--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1954,4 +1954,7 @@
     <string name="B24">Casino</string>
     <string name="P452">Perya</string>
     <string name="B634">The Data Privacy Act</string>
+    <string name="C047">Login Now</string>
+    <string name="C048">View your VIP information after you log in</string>
+    <string name="C049">Welcome to OKBET!</string>
 </resources>
