--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1824,4 +1824,7 @@
     <string name="B24">Casino</string>
     <string name="P452">Perya</string>
     <string name="B634">Luật bảo vệ dữ liệu cá nhân</string>
+    <string name="C047">Đăng nhập ngay</string>
+    <string name="C048">Đăng nhập để xem thông tin VIP của bạn</string>
+    <string name="C049">Chào mừng bạn đến với OKBET!</string>
 </resources>
