--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1883,4 +1883,15 @@
     <string name="C047">立即登录</string>
     <string name="C048">登录后查看您的VIP信息</string>
     <string name="C049">欢迎来到OKBET！</string>
+    <string name="B463">信息确认</string>
+    <string name="P283">"上传手持ID自拍照  "</string>
+    <string name="P322_1">上传一张手持身份证的自拍照以供验证</string>
+    <string name="P337_1">复制作为我的永久家庭地址</string>
+    <string name="P309_1">你的账号未完全认证</string>
+    <string name="P310_1">尊敬的用户，为了您的账户资金安全，请尽快上传手持ID自拍照</string>
+    <string name="P319_1">请上传一张手持有效身份证件的自拍照</string>
+    <string name="P320_1">请确保环境光线充足，面部清晰</string>
+    <string name="P321_1">请勿戴帽子或口罩，以免遮挡面部</string>
+    <string name="P335">准备好了</string>
+    <string name="P336">手持ID自拍照</string>
 </resources>
