--- a/app/src/main/res/values-phi/strings.xml
+++ b/app/src/main/res/values-phi/strings.xml
@@ -1810,5 +1810,6 @@
     <string name="P321_1">Mangyaring huwag magsuot ng sumbrero o maskara na maaaring matakpan ang iyong mukha</string>
     <string name="P335">Ok. handa na ako</string>
     <string name="P336">Handheld ID na selfie</string>
+    <string name="P338_1">Dapat ay mas mababa sa 500KB ang laki</string>
 </resources>
 
