--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1894,4 +1894,5 @@
     <string name="P321_1">请勿戴帽子或口罩，以免遮挡面部</string>
     <string name="P335">准备好了</string>
     <string name="P336">手持ID自拍照</string>
+    <string name="P338_1">文件大小不超过500KB</string>
 </resources>
