--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1655,7 +1655,7 @@
     <string name="P245">Step 2</string>
     <string name="P246">Step 3</string>
     <string name="P247">Choose a VALID ID TYPE</string>
-    <string name="P248">Upload ID Photo</string>
+    <string name="P248">Take Photo Or Upload Of ID</string>
     <string name="P249">Confirm Information</string>
     <string name="P250">Choose Recommend IDs for Quick Verification within 3 minutes;</string>
     <string name="P251">Other IDs may take up to 24 hours</string>
