--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1884,7 +1884,7 @@
     <string name="C048">登录后查看您的VIP信息</string>
     <string name="C049">欢迎来到OKBET！</string>
     <string name="B463">信息确认</string>
-    <string name="P283">"上传手持ID自拍照  "</string>
+    <string name="P283">上传手持ID自拍照</string>
     <string name="P322_1">上传一张手持身份证的自拍照以供验证</string>
     <string name="P337_1">复制作为我的永久家庭地址</string>
     <string name="P309_1">你的账号未完全认证</string>
