--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1661,7 +1661,7 @@
     <string name="P251">Other IDs may take up to 24 hours</string>
     <string name="P252">Make sure information below is clear on your ID</string>
     <string name="P253">ID Photo</string>
-    <string name="P254">Double-check all scanned details from your ID.</string>
+    <string name="P254">Double check the informations scan from your ID</string>
     <string name="P255">Take a photo or choose one form your albums of your ID and put well in the frame</string>
     <string name="P256">Take ID Photo</string>
     <string name="P257">Oops Invalid ID</string>
